# roboracer-t7

./: .gitignore  QUICKSTART.md  README.md  RUNBOOK_PI_JOYSTICK.md  bringup.launch.py
config/: ackermann_mux_topics.yaml  ekf_car.yaml  joy_rc_steer_fix.yaml  slam_toolbox_mapper_online_async.yaml
docker/: dockerfile  entrypoint.sh  install_mux_config.sh  manual_map_logger.dockerfile  manual_map_logger_entrypoint.sh  patch_tum_main_globaltraj_ros.py  patch_vesc_yaml.py  raceline.dockerfile  racer.repos  run_tum_raceline_optimizer.sh
docs/: 00_START_HERE.md  01_INSTALL_AND_REQUIREMENTS.md  02_DOCKER_BUILD_PUSH.md  03_CAR_CONNECT_AND_CONTAINER.md  04_MANUAL_DRIVE_SETUP.md  05_AUTONOMY_SETUP_AND_RUN.md  06_VALIDATION_CHECKLIST.md  07_TROUBLESHOOTING.md  08_FULL_STACK_REFERENCE_MANUAL.md  09_PLATFORM_VERSIONS_AND_RELEASE_NOTES.md  10_EXTERNAL_CREDITS.md  11_SAFETY_FAILSAFE_AND_COMPETITION_RULES.md  AUTONOMY_MODES.md  COMPETITION_RACELINE_PIPELINE.md  CONTROL_AND_PLANNING_STACK.md  CURSOR_AGENT_HANDOFF_local_vs_origin_main.md  MANUAL_AUTONOMY_NODE_TOPIC_FLOW.md  MANUAL_MAP_LOGGER.md  POINTCLOUD2_TO_LASERSCAN_CAR_RUNBOOK.md  RACELINE_PIPELINE.md  README.md  ROBORACER_NODE_MAP.md  RUNBOOK_ARM64_CAMERA_DOCKER.md
history/: 2026-04-13_autonomy_motor_vesc_debug.md
pure_pursuit_followpath/: package.xml  setup.py
pure_pursuit_followpath/pure_pursuit_followpath/: csv_to_mav_path_publisher.py  path_utils.py  pp_csv_followpath_client.py  pp_followpath_server.py  pp_math.py  pp_mav_path_follower.py
pure_pursuit_followpath/resource/: pure_pursuit_followpath
scripts/: car_run.sh  (+9 more)
(+33 files in other folders)
