<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pure_pursuit_followpath</name>
  <version>0.0.0</version>
  <description>Pure Pursuit controller exposed as nav2_msgs/action/FollowPath for RoboRacer (Ackermann mux output, TF pose input).</description>
  <maintainer email="nabilafifahq@gmail.com">RoboRacer Team 7</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

